# corex

./: .env.example  .gitignore  SETUP.md  launcher.mjs  start.bat  start.sh  stop.bat
01_Gateway_Node/: CMakeLists.txt  index.js  package-lock.json  package.json
01_Gateway_Node/account/: profile_info.js
01_Gateway_Node/bridge/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  shm-bridge.cpp
01_Gateway_Node/bridge/headers/: optionChainBufferHeader.h  optionChainBufferHeader.hpp  shm-buffer.hpp
01_Gateway_Node/bridge/src/: shm-bridge.cpp
01_Gateway_Node/connections/: auth_server.js  expiryDownloader.js  fyers_connect.js  session.js  token.js
01_Gateway_Node/generators/: headerGenerator.js  optionGenerator.js  symbology.js
01_Gateway_Node/helpers/: activeSymbols.js  apiManager.js  apiPulse.js  ensureAndRead.helper.js  ensureBridge.js  expiryFilters.js  fs.helper.js  headerGenerator.js  loader.js  symbology.js
01_Gateway_Node/others/: auth-status.html
01_Gateway_Node/shm/: shmReader.js  shmWriter.js
01_Gateway_Node/streams/: depth.stream.js  depthApiPolls.stream.js  optionApiPolls.stream.js  optionChain.stream.js  options&indics.stream.js  stock.stream.js  tbtData.stream.js
01_Gateway_Node/streams/api-streams/: option-chain.stream.js
01_Gateway_Node/streams/sockets/: option-chain.stream.js  optionChain.stream.js
01_Gateway_Node/streams/sockets/indics/: nifty.socket.js
01_Gateway_Node/timers/: atomicClock.js  expiryGuard.js
02_Strategies_Python/: example.py
02_Strategies_Python/shm/: __init__.py  _platform.py  reader.py  types.py
03_Core_Cpp/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  buildCommands.txt  example.cpp  main.cpp
03_Core_Cpp/headers/: bufferHeaders.hpp  optionManager.hpp  shm-buffer.hpp  shmController.hpp  shmManager.hpp  shmReader.hpp  shmWatcher.hpp
03_Core_Cpp/importers/: sampleStruct.cpp
03_Core_Cpp/in/: indicesMapper.cpp
03_Core_Cpp/managers/: optionManager.cpp
03_Core_Cpp/shm/: shmWatcher.cpp
Config/: launcher.mjs  option-config.json  shm-layout.json  shm_layout.json
Docs/: shmComm.md
